# BoardStream

./: README.md
desktopApp/: CMakeLists.txt  main.qml
desktopApp/include/: camerathread.h  streamhandler.h  whiteboardimageprovider.h
desktopApp/resources/: Info.plist
desktopApp/src/: camerathread.cpp  main.cpp  streamhandler.cpp  whiteboardimageprovider.cpp
server/: index.html  main.py  package-lock.json  package.json
server/src/: App.svelte  app.css
server/src/Components/: Nav.svelte
